tests/paczka1/small_fuzzy/17954390.err
Error in line 3: A543 A804 72,1
Error in line 5: A543 A408 46,9
Error in line 6: A543 S129 96,3
Error in line 7: A543 A543 37,1
